--- a/examples/blackscholes/CMakeLists.txt
+++ b/examples/blackscholes/CMakeLists.txt
@@ -5,11 +5,14 @@ project(blackscholes VERSION 1.0 LANGUAGES CXX)
 #####################################################################
 
 include(cmake/CPM.cmake)
-CPMAddPackage(
-  NAME Hemi
-  VERSION 2.0.1
-  GITHUB_REPOSITORY harrism/hemi
-)
+CPMAddPackage("gh:frobnitzem/Hemi@2.0.3")
+#CPMAddPackage(
+#  NAME Hemi
+#  VERSION 2.0.2
+#  GITHUB_REPOSITORY frobnitzem/hemi
+#)
+find_package(Hemi)
+message(STATUS "Configured Hemi with GPU = ${HEMI_ENABLE_GPU} (${HEMI_GPU_LANG})")
 
 # Define the source to compile:
 add_executable(blackscholes blackscholes.cpp)
